--- a/environment.yml
+++ b/environment.yml
@@ -5,9 +5,13 @@ channels:
 dependencies:
   - python=3.8.8
   - geopandas=0.9.0
+  - pandas=1.2.4
+  - geoplot=0.4.1
+  - shapely=1.7.1
+  - matplotlib=3.4.1
   - cartopy=0.18.0
+  - contextily=1.1.0
   - notebook=6.2.0
   - rasterio=1.2.0
-  - rasterstats=0.14.0
   - seaborn=0.11.1
 prefix: C:\Users\e16006469\Anaconda3\envs\egm722
